update registration
