# model/registration.go
@@ -1,44 +1,48 @@
 package model
 
-import "time"
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
 
 // Registrations registrations 结构体
 type Registrations struct {
-	Id                  int       `gorm:"primarykey;comment:''" json:"id"`
-	Number              string    `json:"number"`
-	Registrationscol    string    `json:"registrationscol"`
-	Name                string    `json:"name"`
-	Gender              int       `json:"gender"`
-	Phone               string    `json:"phone"`
-	Wechat              string    `json:"wechat"`
-	Age                 int       `json:"age"`
-	Height              int       `json:"height"`
-	Weight              int       `json:"weight"`
-	Location            string    `json:"location"`
-	Residence           string    `json:"residence"`
-	Education           string    `json:"education"`
-	Qualifications      string    `json:"qualifications"`
-	SexualOrientation   string    `json:"sexual_orientation"`
-	MarriageHistory     string    `json:"marriage_history"`
-	Profession          string    `json:"profession"`
-	AnnualIncome        string    `json:"annual_income"`
-	AssetStatus         string    `json:"asset_status"`
-	SelfDescription     string    `json:"self_description"`
-	MarriageCertificate string    `json:"marriage_certificate"`
-	LiveTogether        string    `json:"live_together"`
-	NeedChild           string    `json:"need_child"`
-	BridePrice          string    `json:"bride_price"`
-	Distance            string    `json:"distance"`
-	WeddingMode         string    `json:"wedding_mode"`
-	MarriedLife         string    `json:"married_life"`
-	LookingFor          string    `json:"looking_for"`
-	ExpectHelp          string    `json:"expect_help"`
-	Channel             string    `json:"channel"`
-	Status              int       `json:"status"`
-	Reason              string    `json:"reason"`
-	CreatedAt           time.Time `json:"created_at"`
-	UpdatedAt           time.Time `json:"updated_at"`
-	DeletedAt           time.Time `json:"deleted_at"`
+	Id                  int            `gorm:"primarykey;comment:''" json:"id"`
+	Number              string         `json:"number"`
+	Registrationscol    string         `json:"registrationscol"`
+	Name                string         `json:"name"`
+	Gender              int            `json:"gender"`
+	Phone               string         `json:"phone"`
+	Wechat              string         `json:"wechat"`
+	Age                 int            `json:"age"`
+	Height              int            `json:"height"`
+	Weight              int            `json:"weight"`
+	Location            string         `json:"location"`
+	Residence           string         `json:"residence"`
+	Education           string         `json:"education"`
+	Qualifications      string         `json:"qualifications"`
+	SexualOrientation   string         `json:"sexual_orientation"`
+	MarriageHistory     string         `json:"marriage_history"`
+	Profession          string         `json:"profession"`
+	AnnualIncome        string         `json:"annual_income"`
+	AssetStatus         string         `json:"asset_status"`
+	SelfDescription     string         `json:"self_description"`
+	MarriageCertificate string         `json:"marriage_certificate"`
+	LiveTogether        string         `json:"live_together"`
+	NeedChild           string         `json:"need_child"`
+	BridePrice          string         `json:"bride_price"`
+	Distance            string         `json:"distance"`
+	WeddingMode         string         `json:"wedding_mode"`
+	MarriedLife         string         `json:"married_life"`
+	LookingFor          string         `json:"looking_for"`
+	ExpectHelp          string         `json:"expect_help"`
+	Channel             string         `json:"channel"`
+	Status              int            `json:"status"`
+	Reason              string         `json:"reason"`
+	CreatedAt           time.Time      `json:"created_at"`
+	UpdatedAt           time.Time      `json:"updated_at"`
+	DeletedAt           gorm.DeletedAt `json:"deleted_at"`
 }
 
 // Registrations 审核参数
@@ -56,41 +60,41 @@ type RegistrationsCheckResp struct {
 
 // RegistrationsListReq registrations列表参数
 type RegistrationsListReq struct {
-	Id                  int       `json:"id" form:"id"`
-	Number              string    `json:"number" form:"number"`
-	Registrationscol    string    `json:"registrationscol" form:"registrationscol"`
-	Name                string    `json:"name" form:"name"`
-	Gender              int       `json:"gender" form:"gender"`
-	Phone               string    `json:"phone" form:"phone"`
-	Wechat              string    `json:"wechat" form:"wechat"`
-	Age                 int       `json:"age" form:"age"`
-	Height              int       `json:"height" form:"height"`
-	Weight              int       `json:"weight" form:"weight"`
-	Location            string    `json:"location" form:"location"`
-	Residence           string    `json:"residence" form:"residence"`
-	Education           string    `json:"education" form:"education"`
-	Qualifications      string    `json:"qualifications" form:"qualifications"`
-	SexualOrientation   string    `json:"sexual_orientation" form:"sexual_orientation"`
-	MarriageHistory     string    `json:"marriage_history" form:"marriage_history"`
-	Profession          string    `json:"profession" form:"profession"`
-	AnnualIncome        string    `json:"annual_income" form:"annual_income"`
-	AssetStatus         string    `json:"asset_status" form:"asset_status"`
-	SelfDescription     string    `json:"self_description" form:"self_description"`
-	MarriageCertificate string    `json:"marriage_certificate" form:"marriage_certificate"` //
-	LiveTogether        string    `json:"live_together" form:"live_together"`
-	NeedChild           string    `json:"need_child" form:"need_child"`
-	BridePrice          string    `json:"bride_price" form:"bride_price"`
-	Distance            string    `json:"distance" form:"distance"`
-	WeddingMode         string    `json:"wedding_mode" form:"wedding_mode"`
-	MarriedLife         string    `json:"married_life" form:"married_life"`
-	LookingFor          string    `json:"looking_for" form:"looking_for"`
-	ExpectHelp          string    `json:"expect_help" form:"expect_help"`
-	Channel             string    `json:"channel" form:"channel"`
-	Status              int       `json:"status"`
-	Reason              string    `json:"reason"`
-	CreatedAt           time.Time `json:"created_at" form:"created_at"`
-	UpdatedAt           time.Time `json:"updated_at" form:"updated_at"`
-	DeletedAt           time.Time `json:"deleted_at" form:"deleted_at"`
+	Id                  int            `json:"id" form:"id"`
+	Number              string         `json:"number" form:"number"`
+	Registrationscol    string         `json:"registrationscol" form:"registrationscol"`
+	Name                string         `json:"name" form:"name"`
+	Gender              int            `json:"gender" form:"gender"`
+	Phone               string         `json:"phone" form:"phone"`
+	Wechat              string         `json:"wechat" form:"wechat"`
+	Age                 int            `json:"age" form:"age"`
+	Height              int            `json:"height" form:"height"`
+	Weight              int            `json:"weight" form:"weight"`
+	Location            string         `json:"location" form:"location"`
+	Residence           string         `json:"residence" form:"residence"`
+	Education           string         `json:"education" form:"education"`
+	Qualifications      string         `json:"qualifications" form:"qualifications"`
+	SexualOrientation   string         `json:"sexual_orientation" form:"sexual_orientation"`
+	MarriageHistory     string         `json:"marriage_history" form:"marriage_history"`
+	Profession          string         `json:"profession" form:"profession"`
+	AnnualIncome        string         `json:"annual_income" form:"annual_income"`
+	AssetStatus         string         `json:"asset_status" form:"asset_status"`
+	SelfDescription     string         `json:"self_description" form:"self_description"`
+	MarriageCertificate string         `json:"marriage_certificate" form:"marriage_certificate"` //
+	LiveTogether        string         `json:"live_together" form:"live_together"`
+	NeedChild           string         `json:"need_child" form:"need_child"`
+	BridePrice          string         `json:"bride_price" form:"bride_price"`
+	Distance            string         `json:"distance" form:"distance"`
+	WeddingMode         string         `json:"wedding_mode" form:"wedding_mode"`
+	MarriedLife         string         `json:"married_life" form:"married_life"`
+	LookingFor          string         `json:"looking_for" form:"looking_for"`
+	ExpectHelp          string         `json:"expect_help" form:"expect_help"`
+	Channel             string         `json:"channel" form:"channel"`
+	Status              int            `json:"status"`
+	Reason              string         `json:"reason"`
+	CreatedAt           time.Time      `json:"created_at" form:"created_at"`
+	UpdatedAt           time.Time      `json:"updated_at" form:"updated_at"`
+	DeletedAt           gorm.DeletedAt `json:"deleted_at" form:"deleted_at"`
 }
 
 // RegistrationsDetailReq registrations详情参数
@@ -106,41 +110,41 @@ type RegistrationsAddReq struct {
 
 // RegistrationsEditReq registrations新增参数
 type RegistrationsEditReq struct {
-	Id                  int       `json:"id" form:"id"`
-	Number              string    `json:"number" form:"number"`
-	Registrationscol    string    `json:"registrationscol" form:"registrationscol"`
-	Name                string    `json:"name" form:"name"`
-	Gender              int       `json:"gender" form:"gender"`
-	Phone               string    `json:"phone" form:"phone"`
-	Wechat              string    `json:"wechat" form:"wechat"`
-	Age                 int       `json:"age" form:"age"`
-	Height              int       `json:"height" form:"height"`
-	Weight              int       `json:"weight" form:"weight"`
-	Location            string    `json:"location" form:"location"`
-	Residence           string    `json:"residence" form:"residence"`
-	Education           string    `json:"education" form:"education"`
-	Qualifications      string    `json:"qualifications" form:"qualifications"`
-	SexualOrientation   string    `json:"sexual_orientation" form:"sexual_orientation"`
-	MarriageHistory     string    `json:"marriage_history" form:"marriage_history"`
-	Profession          string    `json:"profession" form:"profession"`
-	AnnualIncome        string    `json:"annual_income" form:"annual_income"`
-	AssetStatus         string    `json:"asset_status" form:"asset_status"`
-	SelfDescription     string    `json:"self_description" form:"self_description"`
-	MarriageCertificate string    `json:"marriage_certificate" form:"marriage_certificate"` //
-	LiveTogether        string    `json:"live_together" form:"live_together"`
-	NeedChild           string    `json:"need_child" form:"need_child"`
-	BridePrice          string    `json:"bride_price" form:"bride_price"`
-	Distance            string    `json:"distance" form:"distance"`
-	WeddingMode         string    `json:"wedding_mode" form:"wedding_mode"`
-	MarriedLife         string    `json:"married_life" form:"married_life"`
-	LookingFor          string    `json:"looking_for" form:"looking_for"`
-	ExpectHelp          string    `json:"expect_help" form:"expect_help"`
-	Channel             string    `json:"channel" form:"channel"`
-	Status              int       `json:"status"`
-	Reason              string    `json:"reason"`
-	CreatedAt           time.Time `json:"created_at" form:"created_at"`
-	UpdatedAt           time.Time `json:"updated_at" form:"updated_at"`
-	DeletedAt           time.Time `json:"deleted_at" form:"deleted_at"`
+	Id                  int            `json:"id" form:"id"`
+	Number              string         `json:"number" form:"number"`
+	Registrationscol    string         `json:"registrationscol" form:"registrationscol"`
+	Name                string         `json:"name" form:"name"`
+	Gender              int            `json:"gender" form:"gender"`
+	Phone               string         `json:"phone" form:"phone"`
+	Wechat              string         `json:"wechat" form:"wechat"`
+	Age                 int            `json:"age" form:"age"`
+	Height              int            `json:"height" form:"height"`
+	Weight              int            `json:"weight" form:"weight"`
+	Location            string         `json:"location" form:"location"`
+	Residence           string         `json:"residence" form:"residence"`
+	Education           string         `json:"education" form:"education"`
+	Qualifications      string         `json:"qualifications" form:"qualifications"`
+	SexualOrientation   string         `json:"sexual_orientation" form:"sexual_orientation"`
+	MarriageHistory     string         `json:"marriage_history" form:"marriage_history"`
+	Profession          string         `json:"profession" form:"profession"`
+	AnnualIncome        string         `json:"annual_income" form:"annual_income"`
+	AssetStatus         string         `json:"asset_status" form:"asset_status"`
+	SelfDescription     string         `json:"self_description" form:"self_description"`
+	MarriageCertificate string         `json:"marriage_certificate" form:"marriage_certificate"` //
+	LiveTogether        string         `json:"live_together" form:"live_together"`
+	NeedChild           string         `json:"need_child" form:"need_child"`
+	BridePrice          string         `json:"bride_price" form:"bride_price"`
+	Distance            string         `json:"distance" form:"distance"`
+	WeddingMode         string         `json:"wedding_mode" form:"wedding_mode"`
+	MarriedLife         string         `json:"married_life" form:"married_life"`
+	LookingFor          string         `json:"looking_for" form:"looking_for"`
+	ExpectHelp          string         `json:"expect_help" form:"expect_help"`
+	Channel             string         `json:"channel" form:"channel"`
+	Status              int            `json:"status"`
+	Reason              string         `json:"reason"`
+	CreatedAt           time.Time      `json:"created_at" form:"created_at"`
+	UpdatedAt           time.Time      `json:"updated_at" form:"updated_at"`
+	DeletedAt           gorm.DeletedAt `json:"deleted_at" form:"deleted_at"`
 }
 
 // RegistrationsDelReq registrations删除参数
